--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -49,6 +49,7 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="./form-elements.scss")
+    <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon/favicon-16x16.png">
     <script type="text/javascript" src="./jquery-in-parcel.js"></script>
     <script src="../../../../node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
     <script src="../../../../node_modules/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
