--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -13,6 +13,7 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="./cards.scss")
+    <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon/favicon-16x16.png">
     <script type="text/javascript" src="./jquery-in-parcel.js"></script>
     <script src="../../../../node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
 
