Changed paths in includes and imports

--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -1,7 +1,7 @@
-@import '../../components/dropdown/dropdown.scss';
-@import '../../components/date-dropdown/date-dropdown.scss';
-@import '../../components/calendar/calendar.scss';
-@import '../../components/submit-button/submit-button.scss';
+@import '../dropdown/dropdown.scss';
+@import '../date-dropdown/date-dropdown.scss';
+@import '../calendar/calendar.scss';
+@import '../submit-button/submit-button.scss';
 
 .booking-room-card{
   background-color: white;
