--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,5 +1,5 @@
-include ../../components/toxin-logo/toxin-logo.pug
-include ../../components/button/button.pug
+include ../toxin-logo/toxin-logo.pug
+include ../button/button.pug
 
 mixin header({navbar, butLogin, butRegister})
 
