--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
-@import '../../components/toxin-logo/toxin-logo.scss';
-@import '../../components/button/button.scss';
+@import '../toxin-logo/toxin-logo.scss';
+@import '../button/button.scss';
 
 .header{
   padding: 15px 140px;
