--- a/src/components/search-room-card/search-room-card.pug
+++ b/src/components/search-room-card/search-room-card.pug
@@ -1,6 +1,6 @@
-include ../../components/date-dropdown/date-dropdown.pug
-include ../../components/dropdown/dropdown.pug
-include ../../components/submit-button/submit-button.pug
+include ../date-dropdown/date-dropdown.pug
+include ../dropdown/dropdown.pug
+include ../submit-button/submit-button.pug
 
 
 - const dropdown111 = [{name: "Взрослые", value: "0", min: "0", max: "1"},{name: "Дети", value: "1", min: "0", max: "2"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
