--- a/src/components/sign-in-card/sign-in-card.scss
+++ b/src/components/sign-in-card/sign-in-card.scss
@@ -1,6 +1,6 @@
-@import '../../components/text-fields/text-fields.scss';
-@import '../../components/submit-button/submit-button.scss';
-@import '../../components/button/button.scss';
+@import '../text-fields/text-fields.scss';
+@import '../submit-button/submit-button.scss';
+@import '../button/button.scss';
 
 .sign-in-card{
   background-color: white;
