--- a/src/components/sign-up-card/sign-up-card.pug
+++ b/src/components/sign-up-card/sign-up-card.pug
@@ -1,8 +1,8 @@
-include ../../components/text-fields/text-fields.pug
-include ../../components/radio-button/radio-button.pug
-include ../../components/toggle/toggle.pug
-include ../../components/submit-button/submit-button.pug
-include ../../components/button/button.pug
+include ../text-fields/text-fields.pug
+include ../radio-button/radio-button.pug
+include ../toggle/toggle.pug
+include ../submit-button/submit-button.pug
+include ../button/button.pug
 
 - const radio = [{label: "Мужчина", isChecked: true}, {label: "Женщина"}]
 
