--- a/src/components/sign-up-card/sign-up-card.scss
+++ b/src/components/sign-up-card/sign-up-card.scss
@@ -1,8 +1,8 @@
-@import '../../components/text-fields/text-fields.scss';
-@import '../../components/radio-button/radio-button.scss';
-@import '../../components/toggle/toggle.scss';
-@import '../../components/submit-button/submit-button.scss';
-@import '../../components/button/button.scss';
+@import '../text-fields/text-fields.scss';
+@import '../radio-button/radio-button.scss';
+@import '../toggle/toggle.scss';
+@import '../submit-button/submit-button.scss';
+@import '../button/button.scss';
 
 .sign-up-card{
   background-color: white;
