--- a/src/pages/UI-kit/headers-footers/headers-footers.scss
+++ b/src/pages/UI-kit/headers-footers/headers-footers.scss
@@ -3,6 +3,7 @@
 @import "../../../components/logo/logo.scss";
 @import "../../../components/header/header.scss";
 @import "../../../components/footer-creative/footer-creative.scss";
+@import "../../../components/footer/footer.scss";
 
 body {
   max-width: 1440px;
