--- a/src/components/sign-in-card/sign-in-card.pug
+++ b/src/components/sign-in-card/sign-in-card.pug
@@ -1,6 +1,6 @@
-include ../../components/text-fields/text-fields.pug
-include ../../components/submit-button/submit-button.pug
-include ../../components/button/button.pug
+include ../text-fields/text-fields.pug
+include ../submit-button/submit-button.pug
+include ../button/button.pug
 
 mixin sign-in-card()
 
