--- a/src/pages/UI-kit/headers-footers/headers-footers.pug
+++ b/src/pages/UI-kit/headers-footers/headers-footers.pug
@@ -1,6 +1,7 @@
 include ../../../components/logo/logo.pug
 include ../../../components/header/header.pug
 include ../../../components/footer-creative/footer-creative.pug
+include ../../../components/footer/footer.pug
 
 
 -
@@ -22,4 +23,4 @@ html(lang="ru")
   body
     .test
       //- +header({navbar: navbarInHeader, butLogin: "login", butRegister: "register"})
-      +footer-creative()
+      //- +footer-creative()
