--- a/src/components/search-room-card/search-room-card.pug
+++ b/src/components/search-room-card/search-room-card.pug
@@ -7,7 +7,7 @@ include ../submit-button/submit-button.pug
 
 mixin search-room-card()
 
-  .search-room-card
+  .search-room-card.js-search-room-card
     .search-room-card__content
       form(action="/mock-address", method="post")
         .search-room-card__title Найдём номера под ваши пожелания
