--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,9 +2,8 @@
 @import '../button/button.scss';
 
 .header{
-  padding: 15px 140px;
+  padding: 15px 7.3vw;
   background: #FFFFFF;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   &__wrapper{
     display: flex;
     justify-content: space-between;
@@ -19,6 +18,22 @@
   &__nav-item{
     display: flex;
     margin-right: 20px;
+    position: relative;
+    cursor: pointer;
+  }
+  &__submenu{
+    background: #fff;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
+  }
+  &__submenu_hidden{
+    display: none;
+  }
+  &__submenu-text{
+    padding: 5px 2px;
   }
   &__text{
     font-family: $montserrat;
