--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,22 +4,44 @@
 .header{
   padding: 15px 7.3vw;
   background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   &__wrapper{
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
-    z-index: 1;
   }
   &__navbar{
     display: flex;
     margin-left: auto;
+    z-index: 1;
+    @media (max-width: 1023px) {
+      position: absolute;
+      flex-direction: column;
+      margin-left: initial;
+      top: 40px;
+      right: 0;
+      background-color: #fff;
+      box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
+      display: none;
+      &_show {
+        display: block;
+      }
+    }
   }
   &__nav-item{
     display: flex;
     margin-right: 20px;
     position: relative;
     cursor: pointer;
+    @media (max-width: 1023px) {
+      margin-left: 5px;
+      padding: 10px;
+      border-bottom: 1px solid $dark-shade-1;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
   }
   &__submenu{
     background: #fff;
@@ -28,12 +50,22 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
-  }
-  &__submenu_hidden{
-    display: none;
+    &_hidden{
+      display: none;
+    }
+    @media (max-width: 1023px) {
+      position: initial;
+      box-shadow: none;
+    }
   }
   &__submenu-text{
     padding: 5px 2px;
+    @media (max-width: 1023px) {
+      position: initial;
+      box-shadow: none;
+      padding: 0 7px;
+      margin: 15px 0 0px 0;
+    }
   }
   &__text{
     font-family: $montserrat;
@@ -41,6 +73,9 @@
     line-height: 20px;
     color: $dark-shade-50;
     text-decoration: none;
+    @media (max-width: 1023px) {
+      font-size: 20px;
+    }
   }
   &__arrow{
     font-family: $material-icons;
@@ -51,7 +86,77 @@
     height: 21px;
     cursor: pointer;
   }
+  &__user{
+    display: none;
+    margin-left: auto;
+    margin-right: 20px;
+    font-family: $material-icons;
+    font-size: 35px;
+    color: $purple;
+    cursor: pointer;
+    user-select: none;
+    @media (max-width: 1023px) {
+      display: initial;
+    }
+  }
+  &__username{
+    border-left: 1px solid $dark-shade-25;
+    padding-left: 20px;
+    cursor: pointer;
+    @media (max-width: 1023px) {
+      position: absolute;
+      flex-direction: column;
+      top: 40px;
+      right: 0;
+      background-color: #fff;
+      box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
+      border-left: none;
+      padding: 5px;
+      display: none;
+      &_show{
+        display: block;
+      }
+    }
+  }
+  &__buttons{
+    z-index: 1;
+    display: flex;
+    @media (max-width: 1023px) {
+      position: absolute;
+      flex-direction: column;
+      top: 40px;
+      right: 0;
+      background-color: #fff;
+      box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
+      display: none;
+      &_show{
+        display: block;
+      }
+    }
+  }
+  &__button{
+    @media (max-width: 1023px) {
+      padding: 10px;
+      margin-left: 5px;
+    }
+  }
   &__button-login{
     margin-right: 20px;
+    position: relative;
+    @media (max-width: 1023px) {
+      margin-right: 5px;
+      border-bottom: 1px solid $dark-shade-1;
+    }
+  }
+  &__burger{
+    display: none;
+    font-family: $material-icons;
+    font-size: 41px;
+    color: $purple;
+    cursor: pointer;
+    user-select: none;
+    @media (max-width: 1023px) {
+      display: initial;
+    }
   }
 }
