--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -1,29 +1,33 @@
-.submit-button{
-  width: 320px;
-  position: relative;
-  text-transform: uppercase;
-  font-family: $montserrat;
-  font-size: 12px;
-  line-height: 15px;
-  padding-top: 14px;
-  padding-bottom: 15px;
-  font-weight: bold;
-  background: $purple-gradient;
-  color: white;
-  border-radius: 22px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  &:disabled{
-    cursor: auto;
-    opacity: 0.5;
+.submit-button {
+    position: relative;
+  &__button {
+    width: 100%;
+    text-transform: uppercase;
+    font-family: $montserrat;
+    font-size: 12px;
+    line-height: 15px;
+    padding-top: 14px;
+    padding-bottom: 15px;
+    font-weight: bold;
+    background: $purple-gradient;
+    color: white;
+    border-radius: 22px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    &:disabled {
+      cursor: auto;
+      opacity: 0.5;
+    }
   }
-  &__arrow{
+  &__arrow {
     position: absolute;
     text-transform: lowercase;
+    text-align: center;
     font-family: $material-icons;
     font-size: 24px;
     line-height: 44px;
+    color: #fff;
     width: 44px;
     top: 0;
     right: 0;
