--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,7 +24,7 @@
       background-color: #fff;
       box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
       display: none;
-      &_show {
+      &_shown {
         display: block;
       }
     }
@@ -113,7 +113,7 @@
       border-left: none;
       padding: 5px;
       display: none;
-      &_show{
+      &_shown{
         display: block;
       }
     }
@@ -129,7 +129,7 @@
       background-color: #fff;
       box-shadow: 0px 7px 5px 1px rgba(31, 32, 65, 0.05);
       display: none;
-      &_show{
+      &_shown{
         display: block;
       }
     }
