little fix in search-room and sign-in cards

--- a/src/components/search-room-card/search-room-card.pug
+++ b/src/components/search-room-card/search-room-card.pug
@@ -3,7 +3,7 @@ include ../dropdown/dropdown.pug
 include ../submit-button/submit-button.pug
 
 
-- const dropdown111 = [{name: "Взрослые", value: "0", min: "0", max: "1"},{name: "Дети", value: "1", min: "0", max: "2"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+- const dropdown111 = [{name: "Взрослые", value: "0", min: "0", max: "1"},{name: "Дети", value: "0", min: "0", max: "2"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
 
 mixin search-room-card()
 
@@ -14,6 +14,6 @@ mixin search-room-card()
         .search-room-card__date-dropdown
           +date-dropdown({title1: "Прибытие", title2: "Выезд"})
         .search-room-card__dropdown  
-          +dropdown({title: "Гости", elements: dropdown, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+          +dropdown({title: "Гости", elements: dropdown111, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
         .search-room-card__submit-button  
           +submit-button({text: "Подобрать номер"})
