--- a/src/components/search-room-card/search-room-card.scss
+++ b/src/components/search-room-card/search-room-card.scss
@@ -8,6 +8,7 @@
   padding: 40px 30px 30px 30px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+  border-radius: 4px;
   &__title{
     font-family: $opensans;
     font-weight: bold;
