--- a/src/pages/websitePages/sign-in/sign-in.scss
+++ b/src/pages/websitePages/sign-in/sign-in.scss
@@ -18,7 +18,7 @@ body {
     background-position: bottom;
   }
   &__sign-in-card{
-      width: 380px;
+      max-width: 380px;
       margin: 0 auto;
   }
 }
