--- a/src/components/search-room-card/search-room-card.scss
+++ b/src/components/search-room-card/search-room-card.scss
@@ -9,6 +9,9 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  @media (max-width: 360px) {
+    padding: 40px 4.33vw 30px 4.33vw;
+  }
   &__title{
     font-family: $opensans;
     font-weight: bold;
