--- a/src/components/sign-in-card/sign-in-card.scss
+++ b/src/components/sign-in-card/sign-in-card.scss
@@ -7,6 +7,9 @@
   padding: 40px 30px 30px 30px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media (max-width: 360px) {
+    padding: 40px 4.33vw 30px 4.33vw;
+  }
   &__title{
     font-family: $opensans;
     font-weight: bold;
@@ -33,7 +36,5 @@
   &__sign-up-text{
     font-family: $montserrat;
     font-size: 14px;
-  }
-  &__sign-up-button{
   }
 }
