--- a/src/components/sign-up-card/sign-up-card.scss
+++ b/src/components/sign-up-card/sign-up-card.scss
@@ -9,6 +9,9 @@
   padding: 40px 30px 30px 30px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media (max-width: 360px) {
+    padding: 40px 4.33vw 30px 4.33vw;
+  }
   &__title{
     font-family: $opensans;
     font-weight: bold;
