--- a/src/pages/websitePages/registration/registration.scss
+++ b/src/pages/websitePages/registration/registration.scss
@@ -18,7 +18,7 @@ body {
     background-position: bottom;
   }
   &__sign-up-card{
-      width: 380px;
+      max-width: 380px;
       margin: 0 auto;
   }
 }
