--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -137,6 +137,6 @@ html(lang="ru")
           .form-elements__bullet-list
             +bullet-list({bulletList: bulletList})
         .form-elements__comment
-          +comment({avatar: "../../../components/comment/image/avatar1.png", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
+          +comment({avatar: "../../../components/comment/image/avatar1.jpg", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
   
     script(src="./index.js")
