Delete double initialize in calendar

--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -5,7 +5,7 @@ mixin date-dropdown({title1, title2})
       .date-dropdown__title= title1
       .date-dropdown__wrapper
         .date-dropdown__arrow expand_more
-        input.date-dropdown__input.js-date-dropdown__input-1(class="datepicker-here", type= "text", placeholder= "дд.мм.гггг", readonly)
+        input.date-dropdown__input.js-date-dropdown__input-1(type= "text", placeholder= "дд.мм.гггг", readonly)
     .date-dropdown__date
       .date-dropdown__title= title2
       .date-dropdown__wrapper
