--- a/src/components/filter-date/filter-date.pug
+++ b/src/components/filter-date/filter-date.pug
@@ -4,4 +4,4 @@ mixin filter-date({title})
     .filter-date__title= title
     .filter-date__wrapper
       .filter-date__arrow expand_more
-      input.filter-date__input.js-filter-date__input( class="datepicker-here", type= "text", placeholder= "19 авг - 23 авг", readonly)
+      input.filter-date__input.js-filter-date__input(type= "text", placeholder= "19 авг - 23 авг", readonly)
