--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -3,10 +3,17 @@
 .footer-creative{
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-  padding: 5.21vw 22.9vw 5.73vw 22.9vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  &__wrapper{
+    max-width: 560px;
+    margin: 0 auto;
+    padding: 100px 10px 110px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (max-width: 1440px) {
+      padding: 6.94vw 10px 7.64vw;
+    }
+  }
   &__logo{
     margin-bottom: 18px;
   }
