--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,10 +2,18 @@
 @import '../button/button.scss';
 
 .header{
-  padding: 15px 7.3vw;
+  width: 100%;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   &__wrapper{
+    max-width: 1160px;
+    margin: 0 auto;
+    padding: 15px 0;
+    @media (max-width: 1440px) {
+      padding: 15px 5.21vw;
+    }
+  }
+  &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,7 +23,7 @@
     display: flex;
     margin-left: auto;
     z-index: 1;
-    @media (max-width: 1023px) {
+    @media (max-width: 760px) {
       position: absolute;
       flex-direction: column;
       margin-left: initial;
@@ -34,8 +42,14 @@
     margin-right: 20px;
     position: relative;
     cursor: pointer;
-    @media (max-width: 1023px) {
+    &:last-child {
+      margin-right: 0;
+    }
+    @media (max-width: 1440px) {
+    }
+    @media (max-width: 760px) {
       margin-left: 5px;
+      margin-right: 20px;
       padding: 10px;
       border-bottom: 1px solid $dark-shade-1;
       &:last-child {
@@ -53,14 +67,14 @@
     &_hidden{
       display: none;
     }
-    @media (max-width: 1023px) {
+    @media (max-width: 760px) {
       position: initial;
       box-shadow: none;
     }
   }
   &__submenu-text{
     padding: 5px 2px;
-    @media (max-width: 1023px) {
+    @media (max-width: 760px) {
       position: initial;
       box-shadow: none;
       padding: 0 7px;
@@ -73,7 +87,7 @@
     line-height: 20px;
     color: $dark-shade-50;
     text-decoration: none;
-    @media (max-width: 1023px) {
+    @media (max-width: 760px) {
       font-size: 20px;
     }
   }
@@ -86,26 +100,28 @@
     height: 21px;
     cursor: pointer;
   }
-  &__user{
+  &__user-icon{
     display: none;
-    margin-left: auto;
-    margin-right: 20px;
     font-family: $material-icons;
     font-size: 35px;
     color: $purple;
     cursor: pointer;
     user-select: none;
-    @media (max-width: 1023px) {
+    @media (max-width: 1000px) {
       display: initial;
+    }
+    @media (max-width: 760px) {
+      margin-left: auto;
+      margin-right: 20px;
     }
   }
   &__username{
     border-left: 1px solid $dark-shade-25;
-    padding-left: 20px;
+    padding-left: 30px;
+    margin-left: 10px;
     cursor: pointer;
-    @media (max-width: 1023px) {
+    @media (max-width: 1000px) {
       position: absolute;
-      flex-direction: column;
       top: 40px;
       right: 0;
       background-color: #fff;
@@ -119,9 +135,10 @@
     }
   }
   &__buttons{
-    z-index: 1;
+    z-index: 2;
     display: flex;
-    @media (max-width: 1023px) {
+    margin-left: 20px;
+    @media (max-width: 1000px) {
       position: absolute;
       flex-direction: column;
       top: 40px;
@@ -135,7 +152,7 @@
     }
   }
   &__button{
-    @media (max-width: 1023px) {
+    @media (max-width: 1000px) {
       padding: 10px;
       margin-left: 5px;
     }
@@ -143,7 +160,7 @@
   &__button-login{
     margin-right: 20px;
     position: relative;
-    @media (max-width: 1023px) {
+    @media (max-width: 1000px) {
       margin-right: 5px;
       border-bottom: 1px solid $dark-shade-1;
     }
@@ -155,7 +172,7 @@
     color: $purple;
     cursor: pointer;
     user-select: none;
-    @media (max-width: 1023px) {
+    @media (max-width: 760px) {
       display: initial;
     }
   }
