Reworked responsive in cards and form elements

--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -57,7 +57,8 @@ html(lang="ru")
     title Form Elements
   body
     .logo
-      +logo()
+      .logo__wrapper
+        +logo()
     .form-elements
       .form-elements__content
         .form-elements__left
